--- a/LAB2_Source/.project
+++ b/LAB2_Source/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LAB2_Source</name>
+	<name>12_30</name>
 	<comment></comment>
 	<projects>
 	</projects>
